Bug 83041 - Fix getFilterOutsets parameter types in RenderLayer
Summary: Fix getFilterOutsets parameter types in RenderLayer
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Emil A Eklund
URL:
Keywords:
Depends on: 82535
Blocks: 60318
  Show dependency treegraph
 
Reported: 2012-04-03 09:42 PDT by Emil A Eklund
Modified: 2012-04-04 14:06 PDT (History)
4 users (show)

See Also:


Attachments
Patch (2.49 KB, patch)
2012-04-03 10:06 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff
Patch for landing (4.22 KB, patch)
2012-04-04 12:19 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Emil A Eklund 2012-04-03 09:42:31 PDT
getFilterOutsets was changed to take integer arguments in r112475 but RenderLater wasn't updated.
Comment 1 Emil A Eklund 2012-04-03 10:06:54 PDT
Created attachment 135351 [details]
Patch
Comment 2 Julien Chaffraix 2012-04-03 18:09:39 PDT
Comment on attachment 135351 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=135351&action=review

> Source/WebCore/rendering/RenderLayer.cpp:4157
>      // filtered areas with the outsets if we know that the filter is going to render in hardware.

Above there are tons of implicit conversion due to calculateLayerBounds returning an IntRect, could we make those explicit?
Comment 3 Emil A Eklund 2012-04-03 20:54:13 PDT
(In reply to comment #2)
> (From update of attachment 135351 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=135351&action=review
> 
> > Source/WebCore/rendering/RenderLayer.cpp:4157
> >      // filtered areas with the outsets if we know that the filter is going to render in hardware.
> 
> Above there are tons of implicit conversion due to calculateLayerBounds returning an IntRect, could we make those explicit?

That seems like a good idea, I'll go through them all tomorrow and make it explicit where it makes sense.

Thanks!
Comment 4 Emil A Eklund 2012-04-04 12:19:24 PDT
Created attachment 135649 [details]
Patch for landing
Comment 5 WebKit Review Bot 2012-04-04 14:06:28 PDT
Comment on attachment 135649 [details]
Patch for landing

Clearing flags on attachment: 135649

Committed r113236: <http://trac.webkit.org/changeset/113236>
Comment 6 WebKit Review Bot 2012-04-04 14:06:32 PDT
All reviewed patches have been landed.  Closing bug.