Fix getFilterOutsets parameter types in RenderLayer https://bugs.webkit.org/show_bug.cgi?id=83041

Reviewed by Julien Chaffraix.

The getFilterOutsets method was changed to take integers in r112475, update
RenderLayer to use the right data type for the outset arguments.

No new tests, no change in functionality.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setFilterBackendNeedsRepaintingInRect):
(WebCore::RenderLayer::calculateLayerBounds):


Canonical link: https://commits.webkit.org/100573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113236 268f45cc-cd09-0410-ab3c-d52691b4dbfc